--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -43,7 +43,6 @@
       padding: 0 60px;
       transition: all .5s ease-in-out;
 
-
       @media (max-width: 1280px) {
         padding: 0 15px 0 265px;
         height: 65px;
@@ -63,7 +62,7 @@
 
       .main-nav {
         padding: 0;
-        
+
         @media (max-width: $screen-md-min) {
           padding: 64px 0 15px 0;
         }
@@ -92,7 +91,7 @@
       @media (max-width: $screen-lg-min) {
         padding: 15px;
       }
-      
+
       .dashboard-top-heading {
         margin-bottom: 70px;
 
@@ -126,10 +125,22 @@
             color: $dark-color;
           }
         }
-        
+
         .dashboard-btn-create {
+          min-width: 320px;
+          text-align: center;
+          padding: 21px;
+          font-size: 16px;
+          line-height: 18px;
           background-color: $main-color;
-          
+
+          @media (max-width: $screen-sm-min) {
+            min-width: inherit;
+            padding: 15px 20px;
+            font-size: 14px;
+            line-height: 16px;
+          }
+
           &:hover {
             border-color: $dark-color;
             background-color: $dark-color;
@@ -307,11 +318,11 @@
           &:hover {
             opacity: .8;
           }
-          
+
           &.edit {
             color: $main-color;
           }
-          
+
           &.delete {
             color: #f33;
           }
@@ -358,6 +369,326 @@
           height: 2px;
           width: 100%;
           background-color: $dark-color;
+        }
+      }
+    }
+  }
+}
+
+.dashboard-profile-table {
+  overflow: auto;
+  margin-bottom: 15px;
+}
+
+.invest-profiles-table {
+  width: 100%;
+  border-spacing: 0;
+  border-collapse: inherit;
+
+  @media (max-width: $screen-md-min) {
+    width: 700px;
+  }
+
+  tr {
+    &:first-child {
+      td {
+        &:first-child {
+          border-radius: 5px 0 0 0;
+        }
+
+        &:last-child {
+          border-radius: 0 5px 0 0;
+        }
+      }
+    }
+
+    &:last-child {
+      td {
+        border-bottom: 2px solid $dark-color;
+
+        &:first-child {
+          border-radius: 0 0 0 5px;
+        }
+
+        &:last-child {
+          border-radius: 0 0 5px 0;
+        }
+      }
+    }
+
+    td {
+      border: 2px solid $dark-color;
+      border-bottom: none;
+      border-right: none;
+      padding: 15px;
+      font-size: 16px;
+      line-height: 18px;
+      color: $dark-color;
+
+      @media (max-width: $screen-md-max) {
+        width: auto !important;
+      }
+
+      &:last-child {
+        border-right: 2px solid $dark-color;
+        text-align: center;
+      }
+
+      &.wholesale-investor {
+        background-color: #c69c6d;
+        color: #fff;
+      }
+
+      p {
+        margin: 0;
+      }
+
+      .profile-status {
+        display: block;
+        font-size: 16px;
+        line-height: 18px;
+        font-weight: 700;
+        color: $main-color;
+        text-transform: uppercase;
+        white-space: nowrap;
+        margin-left: 15px;
+
+        i {
+          display: inline-block;
+          vertical-align: middle;
+          color: $main-color;
+          font-size: 20px;
+          line-height: 22px;
+          margin-left: 5px;
+        }
+      }
+    }
+  }
+}
+
+.profile-text {
+  margin: 0;
+  padding: 0 15px;
+  font-size: 16px;
+  line-height: 18px;
+  color: $dark-color;
+
+  @media (max-width: $screen-sm-min) {
+    padding: 0;
+  }
+}
+
+.profile-details-row {
+  .correct {
+    input {
+      border-color: $main-color;
+      color: $main-color;
+    }
+  }
+
+  .error {
+    input {
+      border-color: #f33;
+      color: #f33;
+    }
+
+    label {
+      color: #f33;
+    }
+  }
+
+  label {
+    display: block;
+    padding: 0 15px;
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 300;
+    margin: 0 0 10px 0;
+
+    @media (max-width: $screen-sm-min) {
+      padding: 0;
+    }
+  }
+
+  input {
+    display: block;
+    width: 100%;
+    height: 60px;
+    border-radius: 5px;
+    border: 2px solid $dark-color;
+    margin-bottom: 30px;
+    padding: 15px;
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 700;
+    outline: none;
+    color: $dark-color;
+  }
+}
+
+.button-wrapper {
+  margin-top: 28px;
+
+  .progress-btn {
+    width: 100%;
+    height: 60px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    span {
+      font-size: 16px;
+      line-height: 18px;
+    }
+
+    .circle-loader {
+      top: 17px;
+    }
+
+    &.active {
+      width: 130px;
+    }
+  }
+}
+
+.advisor-row {
+  .advisor-info {
+    padding: 0 15px;
+
+    @media (max-width: $screen-sm-min) {
+      padding: 0;
+    }
+
+    .advisor-info-row {
+      margin-bottom: 30px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      p {
+        font-size: 16px;
+        line-height: 21px;
+        color: $dark-color;
+        margin-bottom: 10px;
+
+        span {
+          color: $main-color;
+        }
+
+        a {
+          color: $main-color;
+          text-decoration: underline;
+
+          &:hover {
+            text-decoration: none;
+          }
+        }
+      }
+    }
+  }
+}
+
+.upload-file-wrapper {
+  p {
+    font-size: 16px;
+    line-height: 20px;
+    color: $dark-color;
+    margin: 0;
+    padding: 0 10px;
+
+    @media (max-width: $screen-sm-min) {
+      padding: 0;
+    }
+
+    a {
+      color: $main-color;
+      text-decoration: underline;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+
+  .upload-file {
+    position: relative;
+    margin-bottom: 10px;
+
+    .btn-repeat {
+      width: 100%;
+      background-color: $main-color;
+      text-align: center;
+      font-size: 16px;
+      line-height: 18px;
+      padding: 20px;
+      position: relative;
+    }
+
+    .file {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+      opacity: 0;
+      z-index: 10;
+
+      &:hover {
+        + .btn-repeat {
+          background-color: $dark-color;
+        }
+      }
+    }
+  }
+}
+
+.row-invite-friends {
+  margin-top: 30px;
+
+  .friends-list {
+    border: 2px solid $dark-color;
+    border-radius: 5px;
+    padding: 18px 15px 0 15px;
+    margin-bottom: 20px;
+
+    @media (max-width: $screen-sm-min) {
+      padding: 15px;
+    }
+
+    span {
+      display: block;
+      margin-right: 30px;
+      font-size: 16px;
+      line-height: 18px;
+      color: $dark-color;
+      margin-bottom: 17px;
+      white-space: nowrap;
+
+      @media (max-width: $screen-sm-min) {
+        margin-top: 5px;
+        margin-bottom: 5px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+
+      i {
+        display: inline-block;
+        vertical-align: middle;
+        font-size: 20px;
+        line-height: 20px;
+        color: #000;
+        margin-left: 10px;
+        @include transition;
+
+        @media (max-width: $screen-sm-min) {
+          margin-left: 2px;
+        }
+        
+        &:hover {
+          color: #f33;
         }
       }
     }
