--- a/css/about.css
+++ b/css/about.css
@@ -355,6 +355,7 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 14px;
     line-height: 16px;
     font-weight: 700;
+    white-space: nowrap;
     transition: all .2s linear; }
   .progress-btn.active {
     min-width: 50px; }
