--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -526,6 +526,7 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 14px;
     line-height: 16px;
     font-weight: 700;
+    white-space: nowrap;
     @include transition;
   }
 
