--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -327,7 +327,7 @@
         font-size: 16px;
         line-height: 18px;
         color: $dark-color;
-        vertical-align: top;
+        //vertical-align: top;
 
         .pay-apply-button {
           display: inline-block;
