--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ input[type=number]::-webkit-outer-spin-button {
       bottom: auto;
       right: auto;
       transform: none; } }
-  @media (max-height: 480px) {
+  @media (max-height: 768px) {
     .error-page-wrapper {
       position: inherit;
       top: auto;
@@ -229,7 +229,8 @@ input[type=number]::-webkit-outer-spin-button {
       bottom: auto;
       right: auto;
       transform: none;
-      padding: 50px 0; } }
+      padding: 50px 0;
+      margin: 0 auto; } }
   .error-page-wrapper span {
     display: block;
     font-size: 80px;
