--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -348,9 +348,10 @@ input[type=number]::-webkit-outer-spin-button {
     @include reset-position;
   }
 
-  @media (max-height: 480px) {
+  @media (max-height: 768px) {
     @include reset-position;
     padding: 50px 0;
+    margin: 0 auto;
   }
 
   span {
