--- a/css/mediapage.css
+++ b/css/mediapage.css
@@ -717,7 +717,7 @@ input[type=number]::-webkit-outer-spin-button {
   padding-bottom: 50px; }
   @media (max-width: 767px) {
     .latest-news-section {
-      margin-top: 0; } }
+      margin-top: 0 !important; } }
   .latest-news-section .news-list {
     padding-top: 120px; }
     @media (max-width: 767px) {
