--- a/scss/mediapage.scss
+++ b/scss/mediapage.scss
@@ -12,7 +12,7 @@
   padding-bottom: 50px;
 
   @media (max-width: $screen-sm-max) {
-    margin-top: 0;
+    margin-top: 0 !important;
   }
 
   .news-list {
